* overflow corrected.

--- a/ScootProject/style/_img.scss
+++ b/ScootProject/style/_img.scss
@@ -1,6 +1,6 @@
 img {
   height: 100px;
-  display: none;
+  //display: none;
 }
 
 .round {
@@ -8,5 +8,5 @@ img {
   width: 82.933vw;
   aspect-ratio: 1/1;
   background-color: #FCB72B;
-  overflow: hidden;
+
 }
