--- a/ScootProject/style/style.css
+++ b/ScootProject/style/style.css
@@ -10,13 +10,14 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style-type: none;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
   height: 100vh;
   width: 100vw;
   font-family: Inter, Arial, sans-serif;
+  overflow-y: scroll;
 }
 
 .container {
@@ -64,7 +65,6 @@ body {
 
 img {
   height: 100px;
-  display: none;
 }
 
 .round {
@@ -72,7 +72,6 @@ img {
   width: 82.933vw;
   aspect-ratio: 1/1;
   background-color: #FCB72B;
-  overflow: hidden;
 }
 
 /*# sourceMappingURL=style.css.map */
